--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ services:
     - docker
 
 before_install:
-    -docker build -f Dockerfile.dev
+    -docker build -t venuvayila/docker-react -f Dockerfile.dev
