--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,7 @@ services:
     - docker
 
 before_install:
-    -docker build -t venuvayila/docker-react -f Dockerfile.dev
+    - docker build -t venuvayila/docker-react -f Dockerfile.dev
+
+scripts:
+    - docker run venuvayila/docker-react npm run test -- --coverage
