--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,15 @@ before_install:
 
 scripts:
     - docker run -e CI=true venuvayila/docker-react npm run test
+deploy:
+    provider: "elasticbeanstalk"
+    region: "us-east-2"
+    app: "docker"
+    env: "Docker-env"
+    bucket_name: "elasticbeanstalk-us-east-2-069400474327"
+    bucket_path: "docker"
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: 
+        secure: $AWS_SECRET_KEY
